fix styling on award icon mobile

--- a/resources/js/assets/sass/index.scss
+++ b/resources/js/assets/sass/index.scss
@@ -56,3 +56,10 @@
 .services h1,h2,h3,h4, .span_heading {
     font-family: "OpenSauceBold" !important;
 }
+
+
+.award_icon_mobile .slick-track {
+    display: flex;
+    justify-content: center;
+    align-items: center;   
+}
